--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -1,197 +1,74 @@
-<!-- frontend/index.html -->
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Task Manager</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-        />
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
-        />
-        <link rel="stylesheet" href="/frontend/static/styles.css" />
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="#">
-                    <i class="bi bi-check2-all"></i> Task Manager
-                </a>
-                <div class="navbar-nav ms-auto">
-                    <span class="navbar-text" id="user-info"></span>
-                </div>
-            </div>
-        </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Task Manager</title>
+  <link rel="stylesheet" href="/frontend/style.css" />
+</head>
+<body>
+  <div id="app">
+    <!-- Экран авторизации -->
+    <div id="auth-screen" class="screen">
+      <div class="card">
+        <h2>Вход</h2>
+        <form id="login-form">
+          <input type="text" id="login-username" placeholder="Имя пользователя" required />
+          <input type="password" id="login-password" placeholder="Пароль" required />
+          <button type="submit">Войти</button>
+        </form>
+        <p>Нет аккаунта? <a href="#" id="show-register">Зарегистрироваться</a></p>
+      </div>
 
-        <div class="container py-5">
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <div class="card mb-4">
-                        <div class="card-header header-gradient">
-                            <h3 class="mb-0">
-                                <i class="bi bi-plus-circle"></i> Создать новую
-                                задачу
-                            </h3>
-                        </div>
-                        <div class="card-body">
-                            <form id="task-form">
-                                <div class="mb-3">
-                                    <label for="task-name" class="form-label"
-                                        >Название задачи</label
-                                    >
-                                    <input
-                                        type="text"
-                                        class="form-control"
-                                        id="task-name"
-                                        required
-                                    />
-                                </div>
-                                <div class="mb-3">
-                                    <label
-                                        for="task-description"
-                                        class="form-label"
-                                        >Описание</label
-                                    >
-                                    <textarea
-                                        class="form-control"
-                                        id="task-description"
-                                        rows="3"
-                                    ></textarea>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="task-status" class="form-label"
-                                        >Статус</label
-                                    >
-                                    <select
-                                        class="form-select"
-                                        id="task-status"
-                                    >
-                                        <option value="created">Создана</option>
-                                        <option value="in_progress">
-                                            В процессе
-                                        </option>
-                                        <option value="completed">
-                                            Завершена
-                                        </option>
-                                    </select>
-                                </div>
-                                <button type="submit" class="btn btn-primary">
-                                    <i class="bi bi-plus-lg"></i> Добавить
-                                    задачу
-                                </button>
-                            </form>
-                        </div>
-                    </div>
+      <div class="card" id="register-form" style="display:none;">
+        <h2>Регистрация</h2>
+        <form id="register-form-inner">
+          <input type="text" id="reg-username" placeholder="Имя пользователя (4-20 символов)" required />
+          <input type="email" id="reg-email" placeholder="Email" required />
+          <input type="password" id="reg-password" placeholder="Пароль (мин. 5 символов)" required />
+          <button type="submit">Зарегистрироваться</button>
+        </form>
+        <p>Уже есть аккаунт? <a href="#" id="show-login">Войти</a></p>
+      </div>
+    </div>
 
-                    <div class="card">
-                        <div
-                            class="card-header header-gradient d-flex justify-content-between align-items-center"
-                        >
-                            <h3 class="mb-0">
-                                <i class="bi bi-list-check"></i> Мои задачи
-                            </h3>
-                            <span
-                                class="badge bg-light text-dark"
-                                id="task-count"
-                                >0 задач</span
-                            >
-                        </div>
-                        <div class="card-body">
-                            <div id="tasks-container">
-                                <div class="text-center py-5">
-                                    <i class="bi bi-inbox fs-1 text-muted"></i>
-                                    <p class="mt-2 text-muted">
-                                        Задачи не найдены. Создайте первую
-                                        задачу!
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <!-- Основной экран задач -->
+    <div id="tasks-screen" class="screen" style="display:none;">
+      <header>
+        <h1>Мои задачи</h1>
+        <button id="logout-btn">Выйти</button>
+      </header>
+
+      <div class="task-controls">
+        <button id="add-task-btn">➕ Новая задача</button>
+      </div>
+
+      <div id="tasks-list"></div>
+
+      <!-- Модальное окно -->
+      <div id="task-modal" class="modal" style="display:none;">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h3 id="modal-title">Новая задача</h3>
+          <form id="task-form">
+            <input type="hidden" id="task-id" />
+            <input type="text" id="task-name" placeholder="Название задачи" required />
+            <textarea id="task-description" placeholder="Описание (опционально)"></textarea>
+            <select id="task-status">
+              <option value="created">Создана</option>
+              <option value="in_progress">В работе</option>
+              <option value="completed">Завершена</option>
+            </select>
+            <button type="submit">Сохранить</button>
+          </form>
         </div>
+      </div>
+    </div>
 
-        <!-- Модальное окно для редактирования -->
-        <div class="modal fade" id="editModal" tabindex="-1">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Редактировать задачу</h5>
-                        <button
-                            type="button"
-                            class="btn-close"
-                            data-bs-dismiss="modal"
-                        ></button>
-                    </div>
-                    <div class="modal-body">
-                        <form id="edit-form">
-                            <input type="hidden" id="edit-task-id" />
-                            <div class="mb-3">
-                                <label for="edit-task-name" class="form-label"
-                                    >Название</label
-                                >
-                                <input
-                                    type="text"
-                                    class="form-control"
-                                    id="edit-task-name"
-                                    required
-                                />
-                            </div>
-                            <div class="mb-3">
-                                <label
-                                    for="edit-task-description"
-                                    class="form-label"
-                                    >Описание</label
-                                >
-                                <textarea
-                                    class="form-control"
-                                    id="edit-task-description"
-                                    rows="3"
-                                ></textarea>
-                            </div>
-                            <div class="mb-3">
-                                <label for="edit-task-status" class="form-label"
-                                    >Статус</label
-                                >
-                                <select
-                                    class="form-select"
-                                    id="edit-task-status"
-                                >
-                                    <option value="created">Создана</option>
-                                    <option value="in_progress">
-                                        В процессе
-                                    </option>
-                                    <option value="completed">Завершена</option>
-                                </select>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button
-                            type="button"
-                            class="btn btn-secondary"
-                            data-bs-dismiss="modal"
-                        >
-                            Отмена
-                        </button>
-                        <button
-                            type="button"
-                            class="btn btn-primary"
-                            id="save-edit"
-                        >
-                            Сохранить
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <!-- Уведомления -->
+    <div id="notification"></div>
+  </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="/frontend/static/script.js"></script>
-    </body>
+  <script src="/frontend/script.js"></script>
+</body>
 </html>
